# CS1410Module3

./: CMakeLists.txt  README.md  TrevorNeweyHw2_Task1.cpp  function.cpp  functionsReturn.cpp  functionsStruct.cpp  point.cpp
